--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Droid+Serif);
-/* @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300italic,300,700,
-600italic,400italic,600,800italic,800,700italic);
-*/
+@import url("https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro|Source+Serif+Pro");
 body {
   font-family: "Source Sans Pro", sans-serif;
   margin: 0;
@@ -11,11 +8,11 @@ body {
   min-height: 100%;
   height: 100%;
   width: 100%;
-  background: #62727b;
+  background: #263238;
 }
 
 h1, h2 {
-  font-family: "Droid Serif", serif;
+  font-family: "Source Serif Pro", serif;
 }
 
 h1 {
@@ -37,7 +34,6 @@ a, a:hover, a:active, a:visited, a:focus {
 }
 
 p {
-  font-family: "Open Sans", sans-serif;
   font-weight: 300;
   color: #ffffff;
   font-size: 0.95em;
