--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,7 @@
-@import url(http://fonts.googleapis.com/css?family=Droid+Serif);
-/* @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300italic,300,700,
-600italic,400italic,600,800italic,800,700italic);
-*/
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro|Source+Serif+Pro');
 
 $sourceSansPro: "Source Sans Pro", sans-serif;
-$droidSerif: "Droid Serif", serif;
+$sourceSerifPro: "Source Serif Pro", serif;
 $openSans: "Open Sans", sans-serif;
 
 $primaryColorGrey: #263238;
@@ -28,11 +25,11 @@ body {
 	min-height: 100%;
 	height: 100%;
 	width: 100%;
-	background: $materialLightBlueGrey;
+	background: $primaryColorGrey;
 }
 
 h1, h2 {
-	font-family: $droidSerif;
+	font-family: $sourceSerifPro;
 }
 
 h1 {
@@ -54,7 +51,6 @@ a, a:hover, a:active, a:visited, a:focus {
 }
 
 p {
-	font-family: $openSans;
 	font-weight: 300;
 	color: #ffffff;
 	font-size: 0.95em;
