--- a/keyboards/keyboards-style.css
+++ b/keyboards/keyboards-style.css
@@ -1,45 +1,40 @@
 h3::before {
-    display: block;
-    content: " ";
-    margin-top: -3rem;
-    height: 3rem;
-    visibility: hidden;
-    pointer-events: none;
-}
+  display: block;
+  content: " ";
+  margin-top: -3rem;
+  height: 3rem;
+  visibility: hidden;
+  pointer-events: none; }
 
 #top-container {
-    padding-bottom: 10rem;
-}
+  padding-bottom: 10rem; }
 
 @media (max-width: 1300px) {
-    h3::before {
-        display: block;
-        content: " ";
-        margin-top: -5rem;
-        height: 5rem;
-        visibility: hidden;
-        pointer-events: none;
-    }
-}
+  h3::before {
+    display: block;
+    content: " ";
+    margin-top: -5rem;
+    height: 5rem;
+    visibility: hidden;
+    pointer-events: none; } }
 
 @media (max-width: 555px) {
-    h3::before {
-        display: block;
-        content: " ";
-        margin-top: -8rem;
-        height: 8rem;
-        visibility: hidden;
-        pointer-events: none;
-    }
-}
+  h3::before {
+    display: block;
+    content: " ";
+    margin-top: -8rem;
+    height: 8rem;
+    visibility: hidden;
+    pointer-events: none; } }
 
 @media (max-width: 500px) {
-    h3::before {
-        display: block;
-        content: " ";
-        margin-top: -8rem;
-        height: 8rem;
-        visibility: hidden;
-        pointer-events: none;
-    }
-}
+  h3::before {
+    display: block;
+    content: " ";
+    margin-top: -8rem;
+    height: 8rem;
+    visibility: hidden;
+    pointer-events: none; } }
+
+ul {
+  list-style: none; }
